--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -28,7 +28,7 @@ The state serialization is then defined as the dictionary built from the amalgam
       1\ &\when \gamma_\mathbf{s} \in \seq{\H_B}_\mathsf{E}\\
     \end{aligned}\right\}, \gamma_\mathbf{s},
     \var{\gamma_\mathbf{a}}}\right) \;, \\
-    &&C(5) &\mapsto \se(\var{\orderby{x}{x \in \psi_\mathbf{a}}}, \var{\orderby{x}{x \in \psi_\mathbf{b}}}, \var{\orderby{x}{x \in \psi_\mathbf{p}}}, \psi_\mathbf{k}) \;, \\
+    &&C(5) &\mapsto \se(\var{\orderby{x}{x \in \psi_\mathbf{a}}}, \var{\orderby{x}{x \in \psi_\mathbf{b}}}, \var{\orderby{x}{x \in \psi_\mathbf{p}}}) \;, \\
     &&C(6) &\mapsto \se(\eta) \;, \\
     &&C(7) &\mapsto \se(\iota) \;, \\
     &&C(8) &\mapsto \se(\kappa) \;, \\
