--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -1,7 +1,7 @@
 \section{Virtual Machine Invocations}\label{sec:virtualmachineinvocations}
 
 \newcommand*{\pvm}{\mathbf{M}}
-\newcommand*{\segoff}{\pi}
+\newcommand*{\segoff}{\varsigma}
 
 \subsection{Host-Call Result Constants}
 
