--- a/text/ratings.tex
+++ b/text/ratings.tex
@@ -1,7 +1,56 @@
-\section{Ratings and Rewards}\label{sec:ratings}
+\section{Validator Activity Statistics}\label{sec:bookkeeping}
 
-The \Jam chain does not explicitly issue rewards---we leave this as a job to be done by the staking subsystem (a system parachain---hosted without fees---in the current imagining of a public \Jam network). However, much as with validator punishment information, it is important for the \Jam chain to facilitate the arrival of performance information in to the staking subsystem so that it may be acted upon.
+The \Jam chain does not explicitly issue rewards---we leave this as a job to be done by the staking subsystem (in Polkadot's case envisioned as a system parachain---hosted without fees---in the current imagining of a public \Jam network). However, much as with validator punishment information, it is important for the \Jam chain to facilitate the arrival of information on validator activity in to the staking subsystem so that it may be acted upon.
 
 Such performance information cannot directly cover all aspects of validator activity; whereas block production, guarantor reports and availability assurance can easily be tracked on-chain, \textsc{Grandpa}, \textsc{Beefy} and auditing activity cannot. In the latter case, this is instead tracked with validator voting activity: validators vote on their impression of each other's efforts and a median may be accepted as the truth for any given validator. With an assumption of 50\% honest validators, this gives an adequate means of oraclizing this information.
 
 %TODO: Al do we need to count this stuff explicitly per epoch? Any feedback required for Coretime?
+%TODO: Decide whether it's important to do this on-chain or just leave it to Staking chain.
+
+The validator statistics are made on a per-epoch basis and we retain one record of completed statistics and one record which serves as an accumulator for the present epoch. Both are tracked in $\pi$, which is thus a sequence of two elements, with the first being the accumulator and the second the previous epoch's statistics. For each epoch we track a performance record for each validator:
+\begin{equation}
+  \pi \in \seq{\seq{\tuple{
+    \isa{b}{\N}\,,
+    \isa{p}{\N}\,,
+    \isa{d}{\N}\,,
+    \isa{g}{\N}\,,
+    \isa{a}{\N}
+%    \isa{\mathbf{u}}{\seq{\N}_\mathsf{V}}
+  }}_\mathsf{V}}_2
+\end{equation}
+
+The six statistics we track are:
+\begin{description}
+  \item[$b$] The number of blocks produced by the validator.
+  \item[$p$] The number of preimages introduced by the validator.
+  \item[$d$] The total number of octets across all preimages introduced by the validator.
+  \item[$g$] The number of reports guaranteed by the validator.
+  \item[$a$] The number of availability assurances made by the validator.
+%  \item[$\mathbf{u}$] The number of audit announcements made by that validator as seen by other validators. This forms a subjective statistic
+\end{description}
+
+The latter item is not a direct measure of the number of audits performed by the validator, but rather the number of times that other validators have seen the validator announce an audit. This is a measure of the validator's activity in the auditing process.
+
+The objective statistics are updated in line with their description, formally:
+\begin{align}
+    \using m =\; &\tau \bmod \mathsf{E} \ ,\quad m' = \tau' \bmod \mathsf{E}\\
+    (\mathbf{a}, \pi'_1) \equiv\;&\begin{cases}
+        (\pi_0, \pi_1) &\when m' = m \\
+        (\sq{\tuple{0, \dots, [0, \dots]}, \dots}, A(\pi_0))\!\!\!\! &\otherwise
+    \end{cases}\!\!\!\!\\
+    \forall v \in \N_\mathsf{V} :&\; \left\{\begin{aligned}
+        \pi'_0[v]_b &\equiv \mathbf{a}[v]_b + (v = \mathbf{H}_a)\\
+        \pi'_0[v]_p &\equiv \mathbf{a}[v]_p + \begin{cases}
+            |\mathbf{E}_P| &\when v = \mathbf{H}_a \\
+            0 &\otherwise
+        \end{cases}\\
+        \pi'_0[v]_d &\equiv \mathbf{a}[v]_d + \begin{cases}
+            \sum_{d \in \mathbf{E}_P}|d| &\when v = \mathbf{H}_a \\
+            0 &\otherwise
+        \end{cases}\\
+        \pi'_0[v]_g &\equiv \mathbf{a}[v]_g + (\kappa_v \in \mathbf{R})\\
+        \pi'_0[v]_a &\equiv \mathbf{a}[v]_a + (\exists a \in \mathbf{E}_A : a_v = v)
+    \end{aligned}\right.
+\end{align}
+
+Note that $\mathbf{R}$ is the \emph{Reporters} set, as defined in equation \ref{eq:guarantorsig}.
