Remove invalid para

--- a/text/ratings.tex
+++ b/text/ratings.tex
@@ -31,7 +31,7 @@ The six statistics we track are:
 %  \item[$\mathbf{u}$] The number of audit announcements made by that validator as seen by other validators. This forms a subjective statistic
 \end{description}
 
-The latter item is not a direct measure of the number of audits performed by the validator, but rather the number of times that other validators have seen the validator announce an audit. This is a measure of the validator's activity in the auditing process.
+%The latter item is not a direct measure of the number of audits performed by the validator, but rather the number of times that other validators have seen the validator announce an audit. This is a measure of the validator's activity in the auditing process.
 
 The objective statistics are updated in line with their description, formally:
 \begin{align}
