--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -163,14 +163,15 @@ These terms are all contextualized to a single block. They may be superscripted 
   \item[$\mathbf{C}$] The service accumulation-commitment, used to form the \textsc{Beefy} root. See equation \ref{eq:beefycommitment}.
   \item[$\mathbf{E}$] The block extrinsic. See equation \ref{eq:extrinsic}.
   \item[$\mathbf{F}_v$] The \textsc{Beefy} signed commitment of validator $v$. See equation \ref{eq:beefysignedcommitment}.
-  \item[$\mathbf{H}$] The block header. See equation \ref{eq:header}.
   \item[$\mathbf{G}$] The mapping from cores to guarantor keys. See section \ref{sec:coresandvalidators}.
   \item[$\mathbf{G^*}$] The mapping from cores to guarantor keys for the previous rotation. See section \ref{sec:coresandvalidators}.
+  \item[$\mathbf{H}$] The block header. See equation \ref{eq:header}.
   \item[$\mathbf{Q}$] The selection of ready work-reports which a validator determined they must audit. See equation \ref{eq:auditselection}.
-  \item[$\mathbf{R}$] The set of work-reports which have now become available and ready for accumulation. See equation \ref{eq:availableworkreports}.
+  \item[$\mathbf{R}$] The set of Ed25519 guarantor keys who made a work report. See equation \ref{eq:guarantorsig}.
   \item[$\mathbf{S}$] The set of indices of services which have been accumulated (``progressed'') in the block. See equation \ref{eq:servicestoaccumulate}.
   \item[$\mathbf{T}$] The ticketed condition, true if the block was sealed with a ticket signature rather than a fallback. See equations \ref{eq:ticketconditiontrue} and \ref{eq:ticketconditionfalse}.
   \item[$\mathbf{U}$] The audit condition, equal to $\top$ once the block is audited. See section \ref{sec:auditing}.
+  \item[$\mathbf{W}$] The set of work-reports which have now become available and ready for accumulation. See equation \ref{eq:availableworkreports}.
 \end{description}
 
 Without any superscript, the block is assumed to the block being imported or, if no block is being imported, the head of the best chain (see section \ref{sec:bestchain}). Explicit block-contextualizing superscripts include:
@@ -209,7 +210,12 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\sigma$] The $\sigma$verall state of the system. See equations \ref{eq:statetransition}, \ref{eq:statecomposition}. %	σ
   \item[$\tau$] The most recent block's $\tau$imeslot. %	τ
   \item[$\varphi$] The authorization queue. %	ϕ
-  \item[$\psi$] Votes regarding any past judgements. %	ψ
+  \item[$\psi$] Past judgements on work reports and validators. %	ψ
+  \begin{description}
+    \item[$\psi_a$] Work reports judged to be correct.
+    \item[$\psi_b$] Work reports judged to be incorrect.
+    \item[$\psi_p$] Guarantors of invalid work reports.
+  \end{description}
   \item[$\chi$] The privileged service indices. %	χ
   \begin{description}
     \item[$\chi_m$] The index of the empower service.
